--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
     <modules>
         <module>eureka-server</module>
         <module>third-part-index-data</module>
+        <module>index-gather-store-service</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
